<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mg.dribbler.activities.SignupActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <com.mg.dribbler.views.MyCircularImageView
                android:id="@+id/iv_photo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/btn_camera" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/et_firstname"
                    android:hint="@string/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/et_lastname"
                    android:hint="@string/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/email" />
        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/password"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="?attr/editTextColor"
                    android:background="?attr/editTextBackground"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse"
                    android:maxLines="1"
                    android:hint="@string/gender"/>
                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="?attr/editTextColor"
                    android:background="?attr/editTextBackground"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMediumInverse"
                    android:maxLines="1"
                    android:hint="@string/birthday"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/policy"
            android:textColor="@color/grey_45"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_register"
            android:text="@string/REGISTER"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_start_btn_height"
            android:background="@color/green"/>
    </LinearLayout>

</RelativeLayout>
