<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mg.dribbler.activities.SigninAcitivity"
    android:background="@mipmap/background_auth">
    <LinearLayout
        android:id="@+id/ll_panel"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:background="@color/md_grey_200"
            android:hint="@string/email"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:background="@color/md_grey_200"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginBottom="20dp"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/LOGIN"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@color/green"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_below="@+id/ll_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>
</RelativeLayout>
