<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent_DD">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/how_many_did_you_manage"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size22" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/number_picker"
                android:layout_width="500dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                app:np_dividerColor="@color/transparent"
                app:np_formatter="@string/number_picker_formatter"
                app:np_height="120dp"
                app:np_max="10"
                app:np_min="1"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/white"
                app:np_textColor="@color/white_cecfce"
                app:np_textSize="60sp"
                app:np_value="3"
                app:np_width="200dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/save_result"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size24" />
        </RelativeLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_close"/>
</RelativeLayout>