<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_auth"
    tools:context="com.mg.dribbler.activities.StartActivity">

    <LinearLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_start_panel_height"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_start_panel_padding"
        android:paddingRight="@dimen/activity_start_panel_padding">

        <RelativeLayout
            android:id="@+id/rl_facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_start_btn_height"
            android:layout_marginBottom="10dp"
            android:background="@color/fb_color">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="14dp"
                    android:src="@mipmap/icon_fb" />

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_with_facebook"
                    android:textColor="@color/md_grey_50"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_start_btn_height"
            android:layout_marginBottom="10dp"
            android:background="@color/google_color">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="14dp"
                    android:src="@mipmap/icon_google" />

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_with_google"
                    android:textColor="@color/md_grey_50"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:text="@string/REGISTER"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:text="@string/LOGIN"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
